--- a/templates/_partial-form/add-deployment.twig
+++ b/templates/_partial-form/add-deployment.twig
@@ -21,7 +21,7 @@ Needs the following parameters:
                         {% for server in servers if not rsync_only or server.type == 'rsync' %}
                             {% set isSelected = (server.id == form.server) %}
 
-                            {% set servername = server|formatServer %}
+                            {% set servername = server.formatPretty %}
 
                             <option value="{{ server.id }}"{{ isSelected ? ' selected' : '' }}>{{ servername }}</option>
                         {% endfor %}
@@ -46,6 +46,9 @@ Needs the following parameters:
             </li>
         {% endif %}
 
+        {#
+            RSYNC
+        #}
         <li>
             <label for="path">
                 File path
@@ -63,6 +66,54 @@ Needs the following parameters:
         </li>
 
         {% if not rsync_only %}
+
+            {#
+                CodeDeploy
+            #}
+            <li>
+                <label for="cd_name">
+                    CodeDeploy Application Name
+                    <small class="additional">
+                        <strong>CD servers only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="cd_name" id="cd_name" maxlength="100" value="{{ form.cd_name }}" pattern="^[^\n\t]+">
+            </li>
+
+            <li>
+                <label for="cd_group">
+                    CodeDeploy Deployment Group
+                    <small class="additional">
+                        <strong>CD servers only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="cd_group" id="cd_group" maxlength="100" value="{{ form.cd_group }}" pattern="^[^\n\t]+">
+            </li>
+
+            <li>
+                <label for="cd_config">
+                    CodeDeploy Configuration
+                    <small class="additional">
+                        <strong>CD servers only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="cd_config" id="cd_config" maxlength="100" value="{{ form.cd_config }}" pattern="^[^\n\t]+">
+            </li>
+
+
+            {#
+                Elastic Beanstalk
+            #}
+            <li>
+                <label for="eb_name">
+                    Elastic Beanstalk Application Name
+                    <small class="additional">
+                        <strong>EB servers only</strong>
+                    </small>
+                </label>
+                <input class="text-input" type="text" name="eb_name" id="eb_name" maxlength="100" value="{{ form.eb_name }}" pattern="^[^\n\t]+">
+            </li>
+
             <li>
                 <label for="eb_environment">
                     Elastic Beanstalk Environment ID
@@ -73,6 +124,9 @@ Needs the following parameters:
                 <input class="text-input" type="text" name="eb_environment" id="eb_environment" maxlength="100" value="{{ form.eb_environment }}" pattern="^[^\n\t]+">
             </li>
 
+            {#
+                EC2
+            #}
             <li>
                 <label for="ec2_pool">
                     EC2 Pool
@@ -83,11 +137,14 @@ Needs the following parameters:
                 <input class="text-input" type="text" name="ec2_pool" id="ec2_pool" maxlength="100" value="{{ form.ec2_pool }}" pattern="^[^\n\t]+">
             </li>
 
+            {#
+                S3
+            #}
             <li>
                 <label for="s3_bucket">
                     S3 Bucket
                     <small class="additional">
-                        <strong>S3 and EB servers only</strong>
+                        <strong>S3, CD and EB servers only</strong>
                     </small>
                 </label>
                 <input class="text-input" type="text" name="s3_bucket" id="s3_bucket" maxlength="100" value="{{ form.s3_bucket }}" pattern="^[^\n\t]+">
@@ -97,13 +154,21 @@ Needs the following parameters:
                 <label for="s3_file">
                     S3 File
                     <small class="additional">
-                        <strong>S3 servers only</strong>
+                        <strong>S3, CD and EB servers only</strong>
                     </small>
                 </label>
                 <input class="text-input" type="text" name="s3_file" id="s3_file" maxlength="100" value="{{ form.s3_file }}" pattern="^[^\n\t]+">
                 <small class="additional">
-                    Available placeholders: <code>$BUILDID</code>, <code>$PUSHID</code>, <code>$DATE</code> (YYYY-MM-DD).
-                    <br>Leave blank to use <code>$PUSHID.tar.gz</code>.
+                    Available placeholders:
+                    <ul class="inline-list--comma">
+                        <li><code>$APPID</code></li>
+                        <li><code>$APPNAME</code></li>
+                        <li><code>$BUILDID</code></li>
+                        <li><code>$PUSHID</code></li>
+                        <li><code>$DATE</code> (YYYY-MM-DD)</li>
+                        <li><code>$TIME</code> (HH:MM::SS)</li>
+                    </ul>
+                    <br>Leave blank to use <code>$PUSHID.tar.gz</code> (S3) or <code>$APPID/$PUSHID.(zip|tar.gz)</code> (EB, CD).
                 </small>
             </li>
         {% endif %}
