--- a/templates/application/deployment/deployment.twig
+++ b/templates/application/deployment/deployment.twig
@@ -29,7 +29,7 @@
     <p>{{ deployment.name ?: 'None' }}</p>
 
     <h4>Type</h4>
-    <p>{{ deployment.server|formatServerType }}</p>
+    <p>{{ deployment.server.formatHumanType }}</p>
 
     {% if deployment.server.type != 'rsync' %}
 
@@ -62,7 +62,10 @@
         <h4>EC2 Pool</h4>
         <p><code>{{ deployment.ec2pool }}</code></p>
 
-    {% elseif deployment.server.type == 'elasticbeanstalk' %}
+    {% elseif deployment.server.type == 'eb' %}
+
+        <h4>Elastic Beanstalk Application Name</h4>
+        <p><code>{{ deployment.ebName }}</code></p>
 
         <h4>Elastic Beanstalk Environment ID</h4>
         <p><code>{{ deployment.ebEnvironment }}</code></p>
@@ -70,13 +73,33 @@
         <h4>S3 Bucket</h4>
         <p><code>{{ deployment.s3bucket }}</code></p>
 
+        <h4>S3 File</h4>
+        <p><code>{{ deployment.s3file ?: '$APPID/$PUSHID.zip' }}</code></p>
+
     {% elseif deployment.server.type == 's3' %}
 
         <h4>S3 Bucket</h4>
         <p><code>{{ deployment.s3bucket }}</code></p>
 
         <h4>S3 File</h4>
-        <p><code>{{ deployment.s3file ?: '$pushid.tar.gz' }}</code></p>
+        <p><code>{{ deployment.s3file ?: '$PUSHID.tar.gz' }}</code></p>
+
+    {% elseif deployment.server.type == 'cd' %}
+
+        <h4>CodeDeploy Application Name</h4>
+        <p><code>{{ deployment.cdName }}</code></p>
+
+        <h4>CodeDeploy Deployment Group</h4>
+        <p><code>{{ deployment.cdGroup }}</code></p>
+
+        <h4>CodeDeploy Configuration</h4>
+        <p><code>{{ deployment.cdConfiguration }}</code></p>
+
+        <h4>S3 Bucket</h4>
+        <p><code>{{ deployment.s3bucket }}</code></p>
+
+        <h4>S3 File</h4>
+        <p><code>{{ deployment.s3file ?: '$APPID/$PUSHID.tar.gz' }}</code></p>
 
     {% endif %}
 
