Use users selected deployment view on push start

--- a/sass/app/_js.tablesaw.scss
+++ b/sass/app/_js.tablesaw.scss
@@ -159,6 +159,10 @@ CUSTOM OVERRIDES
             background-color: transparent;
         }
     }
+
+    .tablesaw-stack .tablesaw-cell-content label {
+        display: inline-block;
+    }
 }
 
 @media (min-width: 40em) {
