Add 2.7 release notes

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -251,6 +251,8 @@ beta
                 <li><a href="/docs/release-notes-2.6.4.html">2.6.4</a></li>
             </ul>
         </li>
+        <li><a href="/docs/release-notes-2.7.0.html">2.7</a></li>
+
     </ul>
 {% endblock %}
 
