Minor style update on rollback page

--- a/templates/push/rollback.twig
+++ b/templates/push/rollback.twig
@@ -93,7 +93,7 @@
                 </td>
 
                 {% if canRollback %}
-                    <td>
+                    <td class="tr">
                         {% if push.build.status == 'Removed' %}
                             Removed
                         {% elseif push.status == 'Success'%}
