Remove special characters from  and  in s3 file replacements

--- a/templates/_partial-form/add-deployment.twig
+++ b/templates/_partial-form/add-deployment.twig
@@ -162,8 +162,8 @@ Needs the following parameters:
                         <li><code>$APPNAME</code></li>
                         <li><code>$BUILDID</code></li>
                         <li><code>$PUSHID</code></li>
-                        <li><code>$DATE</code> (YYYY-MM-DD)</li>
-                        <li><code>$TIME</code> (HH:MM::SS)</li>
+                        <li><code>$DATE</code> (YYYYMMDD)</li>
+                        <li><code>$TIME</code> (HHMMSS)</li>
                     </ul>
                     <br>Leave blank to use <code>$PUSHID.tar.gz</code> (S3) or <code>$APPID/$PUSHID.(zip|tar.gz)</code> (EB, CD).
                 </small>
