--- a/sass/app/_hal-header.scss
+++ b/sass/app/_hal-header.scss
@@ -148,14 +148,16 @@
     font-weight: normal;
 
     background-color: $text-color;
+    background-image: linear-gradient(to right, $bright-blue 50%, $text-color 50%);
     border: 2px solid $light-grey;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.4) inset;
     color: $white;
+    display: flex;
+
     margin: 0 auto;
+    position: relative;
     @include trailer(.5);
     width: ms(16);
-    overflow: hidden;
-    background-image: linear-gradient(to right, $bright-blue 50%, $text-color 50%);
 
     @include breakpoint(42.1875em) {
         margin-bottom: 0;
@@ -163,17 +165,35 @@
 }
 
 .hal-label > span {
-  display: block;
-  float: left;
-  @include rhythm(0,.1,.1,0);
-  @include padding-x(msem(-10));
-  width: 50%;
+    display: block;
+    flex: 1;
 }
 
 .hal-label__name {
-  text-align: right;
+    text-align: right;
+    padding-right: .5em;
 }
 
 .hal-label__version {
-  text-align: left;
+    text-align: left;
+    padding-left: .5em;
+}
+
+.hal-stamp {
+    color: rgb(250, 190, 0);
+
+    display: block;
+    position: absolute;
+
+    line-height: 1em;
+    margin-top: -.5em;
+    margin-right: -.5em;
+    width: 1em;
+    height: 1em;
+    top: 0;
+    right: 0;
+
+    &:hover {
+        color: rgb(255, 100, 0);
+    }
 }
