--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -1,26 +1,31 @@
 {% import _self as nav_macros %}
+{% import "_partial/macros.twig" as macros %}
 
 <header role="banner">
     {% block banner %}
         <div class="hal">
-            <a href="/" class="wrapper">
+            <div class="wrapper">
 
                 <h1 class="hal-label">
                     <span class="hal-label__name">HAL</span>
-                    <span class="hal-label__version">9000</span>
+                    <span class="hal-label__version">9000 {% if tick.isUpdateTickOn %}
+                        <a class="hal-stamp" href="{{ urlFor('latest.release') }}" title="HAL 9000 was recently updated!">{{ macros.icon('star') }}</a>
+                    {% endif %}</span>
                 </h1>
 
-                <div class="hal-eye circular">
-                    <div class="ring circular"></div>
-                    <div class="oculus circular">
-                        <div class="iris circular narrow"></div>
-                        <div class="iris circular wide"></div>
-                        <div class="highlight alpha"></div>
-                        <div class="highlight"></div>
-                        <div class="highlight beta"></div>
+                <a href="/">
+                    <div class="hal-eye circular">
+                        <div class="ring circular"></div>
+                        <div class="oculus circular">
+                            <div class="iris circular narrow"></div>
+                            <div class="iris circular wide"></div>
+                            <div class="highlight alpha"></div>
+                            <div class="highlight"></div>
+                            <div class="highlight beta"></div>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     {% endblock %}
 
