--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -244,27 +244,7 @@ beta
     {% endif %}
 
     <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
-    <ul class="list--bullet">
-        <li>
-            <a href="/docs/release-notes-2.4.0.html">2.4</a>
-            <ul class="list--bullet">
-                <li><a href="/docs/release-notes-2.4.1.html">2.4.1</a></li>
-                <li><a href="/docs/release-notes-2.4.2.html">2.4.2</a></li>
-            </ul>
-        </li>
-        <li><a href="/docs/release-notes-2.5.0.html">2.5</a></li>
-        <li>
-            <a href="/docs/release-notes-2.6.0.html">2.6</a>
-            <ul class="list--bullet">
-                <li><a href="/docs/release-notes-2.6.1.html">2.6.1</a></li>
-                <li><a href="/docs/release-notes-2.6.2.html">2.6.2</a></li>
-                <li><a href="/docs/release-notes-2.6.3.html">2.6.3</a></li>
-                <li><a href="/docs/release-notes-2.6.4.html">2.6.4</a></li>
-            </ul>
-        </li>
-        <li><a href="/docs/release-notes-2.7.0.html">2.7</a></li>
-
-    </ul>
+    {% include '_partial/help.release-notes.twig' %}
 {% endblock %}
 
 {% block github_permission_changes %}
